@@ -180,6 +180,8 @@ DEPRECATED & DEFUNCT
 	R_HOME/etc/Rprofile.site does not exist.  (This has been
 	undocumented since R 1.4.0.)
 
+    o	CRAM.packages() is deprecated in favour of available.packages().
+
 
 INSTALLATION
 
@@ -339,6 +341,8 @@ BUG FIXES
 
     o	Typo meant that R_alloc was limited to 2^31 not 2^34 on 64-bit
 	builds of R.
+
+    o	pgamma(Inf, 1.1) did not terminate (PR#8001).
 
 
 
